2002-05-14  Alexander V. Lukyanov <lav@yars.free.net>

	* StatusLine.cc: fix for terminals with am and with no xenl (a space
	  could be written in last column).

2002-05-13  Michail Litvak <mci@owl.openwall.com

	* Resolver.cc: check that addresses have proper length.

2002-05-08  Alexander V. Lukyanov <lav@yars.free.net>

	* Http.cc: more generic non-absolute Location: handling; use url::is_url.

2002-05-07  Alexander V. Lukyanov <lav@yars.free.net>

	* ftpclass.cc: move to next peer if no greeting received.
	* Http.cc: handle redirection to non-absolute url specially.
	* FileCopy.cc: change FAmode to RETRIEVE when redirecting from QUOTE_CMD.

2002-05-05  Alexander V. Lukyanov <lav@yars.free.net>

	* LsCache.cc, LsCache.h, commands.cc: add cache:enable, cache:expire
	  and cache:size settings.

2002-04-30  Alexander V. Lukyanov <lav@yars.free.net>

	* Http.cc: add missing port to hftp request.
	* ftpclass.cc: ignore any 550 error for NLST if no file name given.

2002-04-27  Glenn Maynard <g_ld@zewt.org>

	* LsCache.cc: add cache:cache-empty-listings.
	* buffer.h: add IsSaving().
	* FtpDirList.cc, Fish.cc: use alternative LsCache::Add.

2002-04-23  Alexander V. Lukyanov <lav@yars.free.net>

	* FileCopyFtp.cc, resource.cc: add ftp:fxp-force setting.
	* ftpclass.cc: fix status in fxp mode.

2002-04-18  Glenn Maynard <g_ld@zewt.org>

	* Job.cc: Free waiting on dtor.
	* GetFileInfo.cc, GetFileInfo.h: fix comment.

2002-04-17  Alexander V. Lukyanov <lav@yars.free.net>

	* MirrorJob.cc: create first target directory with all parent dirs.

2002-04-15  Glenn Maynard <g_ld@zewt.org>

	* TreatFileJob.cc: remove unneeded return.

2002-04-08  Alexander V. Lukyanov <lav@yars.free.net>

	* Http.cc: accept file size in 416 reply.

2002-04-08  Glenn Maynard <g_ld@zewt.org>

	* FileSetOutput.cc: fix unneeded assert.

2002-03-26  Alexander V. Lukyanov <lav@yars.free.net>

	* ftpclass.cc: don't send CWD ~ when PWD failed.

2002-03-18  Alexander V. Lukyanov <lav@yars.free.net>
